# binance-trade-api

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  docker-compose.yaml  main.py  pyproject.toml
src/application/api/: main.py
src/application/api/middlewares/: main.py  structlog.py
src/application/api/v1/: urls.py
src/application/api/v1/trade/: handlers.py  schemas.py
src/application/api/v2/: urls.py
src/application/api/v2/trade/: handlers.py
src/infra/repositories/trade/: base.py  postgres.py
src/infra/repositories/trade/models/: trade.py
src/logic/: init.py
src/logic/services/: base.py  trade.py
src/settings/: config.py
